--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/dist/ocbeicon.png">
     <link rel="shortcut icon" href="img/favicon.ico">
 
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- HELPERS -->
 
     <link rel="stylesheet" type="text/css" href="css/monarch/helpers/animate.css">
